# ai-sdr

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  run.py
app/: .gitignore  run_reflex.py  rxconfig.py
app/reflex_app/: reflex_app.py
evaluation_tests/: consistency_testing.py  failure_cases.py  failure_test_results.json  performance_benchmarks.py  prompt_variation_results.json  prompt_variations.py  run_all_tests.py
frontend/: streamlit_app.py
scripts/: grok_demo.py  test.py
src/: database.py  evaluation.py  grok.py  main.py  models.py  services.py
src/prompts/: prompt_manager.py
src/prompts/templates/: lead_qualification_system.j2  lead_qualification_user.j2  message_personalization_system.j2  message_personalization_user.j2
